# Custom-Memory-Allocator

./: CMakeLists.txt  LICENSE  README.md  run_benchmark.bat
benchmarks/: benchmark.cpp
include/cmem/: allocator.hpp  block.hpp  common.hpp  freelist.hpp  heap.hpp  platform.hpp
src/: allocator.cpp  freelist.cpp  heap.cpp  main.cpp  overrides.cpp  platform.cpp
